--- a/index.html
+++ b/index.html
@@ -34,8 +34,33 @@
             <!-- Add bookmark page -->
             <div class="js-options">
                 <form id="js-add-bookmark-form">
-                    <label for="title"></label>
+                    <label for="bookmark-title">title: </label>
+                    <input type="text" name="title" id="bookmark-title">
+                    <label for="bookmark-rating">Rating: </label>
+                    <input type="number" name="rating" id="bookmark-rating">
+                    <label for="bookmark-url">Url: </label>
+                    <input type="url" name="url" id="bookmark-url">
+                    <label for="bookmark-description">Description: </label>
+                    <input type="text" name="description" id="bookmark-description">
+                    <button type="submit">Submit</button>
                 </form>
+            </div>
+            <!-- description/edit view -->
+            <div class="js-edit">
+              <button type="button" id="js-add-bookmark">Add Bookmark</button>
+              <select id="js-dropdown-rating">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1">1</option>
+              </select>
+              <form id="js-edit-bookmark-form">
+                <!-- user clicks on element and renders input for editing -->
+                <span class="js-title">Title</span>
+                <span class="js-title">Rating</span>
+                <textarea>description text</textarea>
+              </form>
             </div>
             <div id="bookmark-list">
                 <ul id="js-bookmark-list">
