removed direct DOM manipulations

--- a/index.html
+++ b/index.html
@@ -9,36 +9,8 @@
 </head>
 <body>
     <main role="main">
-        <div class="container">
-            <header>
-                <h1 id="title">My Bookmarks</h1>
-            </header>
-            <!-- Landing page -->
-            <div id="js-form-container">
-                <div id="js-form-select">
-                    <button type="button" id="js-add-bookmark">Add Bookmark</button>
-                    <select id="js-dropdown-rating" class="dropdown-rating">
-                        <option value="" disabled selected hidden>Mininum rating...</option>
-                        <option value="5">5 Stars</option>
-                        <option value="4">4 Stars</option>
-                        <option value="3">3 Stars</option>
-                        <option value="2">2 Stars</option>
-                        <option value="1">1 Star</option>
-                    </select>
-                </div>
-                <form id="js-add-bookmark-form" class="hidden">
-                    <h3 id="bookmark-title">Create a Bookmark:</h3>
-                    <input type="text" name="title" id="bookmark-title" placeholder="Title">
-                    <input type="number" name="rating" id="bookmark-rating" min="1" max="5" placeholder="Rating">
-                    <input type="url" name="url" id="bookmark-url" placeholder="http://article.com">
-                    <textarea type="text" name="description" id="bookmark-description" placeholder="Description..."></textarea>                   
-                    <button type="submit">Submit</button>
-                </form>
-            </div>
-            <div id="bookmark-list">
-                <ul id="js-bookmark-list">
-                </ul>
-            </div>
+        <div class="js-container">
+            
         </div>
     </main>
 
