--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main role="main">
-        <div class="js-container">
+        <div class="js-container container">
             
         </div>
     </main>
