add error handling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main role="main">
+        <div id="js-error-message"></div>
         <div class="js-container container">
             
         </div>
